--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -2,3 +2,10 @@
 @function em($target, $context: $base__font-size) {
   @return ($target / $context) * 1em;
 }
+
+// Grid Context
+
+@function g-context($g-col-width, $g-col-count, $g-gutter-width) {
+  $g-context: ($g-col-width * $g-col-count) + ($g-gutter-width * ($g-col-count - 1));
+  @return $g-context;
+}
