--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -66,3 +66,13 @@ $g-cont-max-w   : 1400px;
 // Border
 
 $br-default: .4em;
+
+
+// Media Query
+
+$break-s : 769px;
+$break-m : 1000px;
+
+
+// Flexbox
+$gutter : 10px;
